# CPP-Templates-Lab

./: 3laba.txt  CMakeLists.txt  LICENSE  README.md
include/: MyQueue.h  SwapEnd.h
include/Dialog/: DialogMenu.h  Exit.h  MainMenu.h  ShowMainMenu.h  TestMyQueue.h  TestSwapEnd.h
src/: main.cpp
